--- a/p5/book-examples/index.html
+++ b/p5/book-examples/index.html
@@ -13,7 +13,7 @@
   </style>
   <script src="../p5.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="color-specGrid.js"></script>
+  <script src="color-spectrum.js"></script>
 </head>
 
 <body>
